--- a/index.html
+++ b/index.html
@@ -1,105 +1,213 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>Zadanie domowe nr:2</title>
-    </head>
-    <body>
-        <header>
-            <a href="index.html" class="logo-WS"><span class="logo-color">Web</span>Studio</a>
-            <nav>
-                <ul class="header-list">
-                    <li><a class="header-link current" href="index.html" >Agencja</a></li>
-                    <li><a class="header-link" href="portfolio.html" >Portfolio</a></li>
-                    <li><a class="header-link " href="#">Kontakt</a></li>
-                </ul>
-            </nav>
-            <div class="header-kontakt">
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+48111111111">+48 111 111 111</a>
-            </div>
-        </header>
-        <main>
-            <section class="title-section">
-                <h1>
-                    EFEKTYWNE ROZWIĄZANIA
-                    DLA WASZEGO BIZNESU
-                </h1>
-                <button type="button">
-                    Zamów usługe
-                </button>
-            </section>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-            <section class="Advantages">
-                <h2>Nasze atuty</h2>
-                <ul>
-                    <li class="adv-list">
-                        <h3>LOREM IPSUM</h3> 
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Nam vel arcu sem. Sed
-                            non sodales dui. Interdum et malesuada
-                        </p>
-                    </li>
-                    <li class="adv-list">
-                        <h3>LOREM IPSUM</h3> 
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Nam vel arcu sem. Sed
-                            non sodales dui. Interdum et malesuada
-                        </p>
-                    </li>
-                    <li class="adv-list">
-                        <h3>LOREM IPSUM</h3> 
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Nam vel arcu sem. Sed
-                            non sodales dui. Interdum et malesuada
-                        </p>
-                    </li>
-                    <li class="adv-list">
-                        <h3>LOREM IPSUM</h3> 
-                        <p>
-                            Lorem ipsum dolor sit amet, consectetur
-                            adipiscing elit. Nam vel arcu sem. Sed
-                            non sodales dui. Interdum et malesuada
-                        </p>
-                    </li>
-                </ul>
-            </section>
-            <section class="what-we-do">
-                <h2>Czym się zajmujemy</h2>
-                <ul>
-                    <li class="wwd-list"><img src="images/GoIT1.jpg" alt="Praca pszy komputerze" width="370"></li>
-                    <li class="wwd-list"><img src="images/GoIT2.jpg" alt="Praca pszy tablecie" width="370"></li>
-                    <li class="wwd-list"><img src="images/GoIT3.jpg" alt="Praca pszy Telefonie" width="370"></li>
-                </ul>
-            </section>
-            <section class="our-team">
-                <h2>Nasz zespół</h2>
-                <ul>
-                    <li class="team-list"><img src="images/john1.jpg" alt="John Doe" width="270" height="260"><h3>John Doe</h3> <p>Product Designer</p></li>
-                    <li class="team-list"><img src="images/john2.jpg" alt="John Doe" width="270" height="260"><h3>John Doe</h3> <p>Frontend Developer</p></li>
-                    <li class="team-list"><img src="images/john3.jpg" alt="John Doe" width="270" height="260"><h3>John Doe</h3> <p>Marketing</p></li>
-                    <li class="team-list"><img src="images/john4.jpg" alt="John Doe" width="270" height="260"><h3>John Doe</h3> <p>UI Designer</p></li>
-                </ul>
-            </section>
-        </main>
-        <footer>
-            <a href="index.html" class="logo-ws"><span class="logo-color">Web</span>Studio</a>
-            <address>
-                <ul>
-                    <li><a class="map-address footer-a-style" href="https://goo.gl/maps/nUJ5Fd3hbuF8FEqy5">m. Warszawa, Aleje Jerozolimskie 21<a></a></li>
-                    <li><a class="contact-info footer-a-style" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li><a class="contact-info footer-a-style" href="tel:+48111111111">+48 111 111 111</a></li>
-                </ul>
-            </address>
-        </footer>
-    </body>
+    <title>Zadanie domowe nr:3</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container header-help">
+        <nav class="header-nav">
+          <a href="index.html" class="logo-ws"
+            ><span class="logo-color">Web</span>Studio</a
+          >
+          <ul class="header-list">
+            <li>
+              <a class="header-link current" href="index.html">Agencja</a>
+            </li>
+            <li><a class="header-link" href="portfolio.html">Portfolio</a></li>
+            <li><a class="header-link" href="#">Kontakt</a></li>
+          </ul>
+        </nav>
+        <div class="header-kontakt">
+          <a
+            class="header-link header-kontact-link"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="header-link header-kontact-link" href="tel:+48111111111"
+            >+48 111 111 111</a
+          >
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="title-section">
+        <div class="container">
+          <h1 class="title-section-h1">
+            EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU
+          </h1>
+          <button class="title-section-button" type="button">
+            Zamów usługe
+          </button>
+        </div>
+      </section>
+
+      <section class="section">
+        <div class="container">
+          <h2 class="advantages-h2">Nasze atuty</h2>
+          <ul class="advantages">
+            <li class="adv-list">
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li class="adv-list">
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li class="adv-list">
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li class="adv-list">
+              <h3>LOREM IPSUM</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section padding-top-0">
+        <div class="container">
+          <h2 class="what-we-do-h2">Czym się zajmujemy</h2>
+          <ul class="what-we-do-list">
+            <li class="wwd-list">
+              <img
+                src="images/GoIT1.jpg"
+                alt="Praca pszy komputerze"
+                width="370"
+              />
+            </li>
+            <li class="wwd-list">
+              <img
+                src="images/GoIT2.jpg"
+                alt="Praca pszy tablecie"
+                width="370"
+              />
+            </li>
+            <li class="wwd-list">
+              <img
+                src="images/GoIT3.jpg"
+                alt="Praca pszy Telefonie"
+                width="370"
+              />
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="our-team section">
+        <div class="container">
+          <h2 class="our-team-h2">Nasz zespół</h2>
+          <ul class="our-team-ul">
+            <li class="team-list">
+              <img
+                src="images/john1.jpg"
+                alt="John Doe"
+                width="270"
+                height="260"
+              />
+              <div>
+                <h3 class="team-list-h3">John Doe</h3>
+                <p class="team-list-p">Product Designer</p>
+              </div>
+            </li>
+            <li class="team-list">
+              <img
+                src="images/john2.jpg"
+                alt="John Doe"
+                width="270"
+                height="260"
+              />
+              <div>
+                <h3 class="team-list-h3">John Doe</h3>
+                <p class="team-list-p">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="team-list">
+              <img
+                src="images/john3.jpg"
+                alt="John Doe"
+                width="270"
+                height="260"
+              />
+              <div>
+                <h3 class="team-list-h3">John Doe</h3>
+                <p class="team-list-p">Marketing</p>
+              </div>
+            </li>
+            <li class="team-list">
+              <img
+                src="images/john4.jpg"
+                alt="John Doe"
+                width="270"
+                height="260"
+              />
+              <div>
+                <h3 class="team-list-h3">John Doe</h3>
+                <p class="team-list-p">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer-portfolio">
+      <div class="container">
+        <a href="index.html" class="logo-ws logo-ws-white"
+          ><span class="logo-color">Web</span>Studio</a
+        >
+        <address>
+          <ul>
+            <li class="address-margin">
+              <a
+                class="map-address footer-a-style"
+                href="https://goo.gl/maps/nUJ5Fd3hbuF8FEqy5"
+                >m. Warszawa, Aleje Jerozolimskie 21</a
+              >
+            </li>
+            <li>
+              <a
+                class="contact-info footer-a-style"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-info footer-a-style" href="tel:+48111111111"
+                >+48 111 111 111</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    </footer>
+  </body>
 </html>
