--- a/portfolio.html
+++ b/portfolio.html
@@ -1,80 +1,199 @@
 <!DOCTYPE html>
 <html lang="pl">
   <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="css/styles.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-        <title>Zadanie domowe nr:2</title>
-    </head>
-    <body>
-        <header>
-            <a class="logo-ws" href="index.html" ><span class="logo-color">Web</span>Studio</a>
-            <nav>
-                <ul class="header-list">
-                    <li><a class="header-link" href="index.html">Agencja</a></li>
-                    <li><a class="header-link current" href="portfolio.html">Portfolio</a></li>
-                    <li><a class="header-link" href="#">Kontakt</a></li>
-                </ul>
-            </nav>
-            <div class="header-kontakt">
-                <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a href="tel:+48111111111">+48 111 111 111</a>
-            </div>
-        </header>
-        <main>
-            <section class="title-button">
-                <h1>Something to hide</h1>
-                <ul>
-                    <li class="but-list">
-                        <button  type="button" style=" width:121px;">
-                            Wszystkie
-                        </button>
-                    </li>
-                    <li class="but-list">
-                        <button type="button" style=" width:93px;">
-                            Strony
-                        </button>
-                    </li>
-                    <li class="but-list">
-                        <button type="button" style=" width:114px;">
-                            Aplikacje
-                        </button>
-                    </li>
-                    <li class="but-list">
-                        <button type="button" style=" width:93px;">
-                            Dizajn
-                        </button>
-                    </li>
-                    <li class="but-list">
-                        <button type="button" style=" width:121px;">
-                            Marketing
-                        </button>
-                    </li>
-                </ul>
-                <ul>
-                    <li class="portf-list"><img src="images/technocrack.jpg" alt="technocrack" width="370"><h3>Technocrack</h3> <p>Strona internetowa</p></li>
-                    <li class="portf-list"><img src="images/GNOvsGS.jpg" alt="Grafika New Orlean vs Golden Star" width="370"><h3>Grafika New Orlean vs Golden Star</h3> <p>Dizajn</p></li>
-                    <li class="portf-list"><img src="images/restauracja-seafood.jpg" alt="Restauracja Seafood" width="370"><h3>Restauracja Seafood</h3> <p>Aplikacja</p></li>
-                    <li class="portf-list"><img src="images/projekt-prime.jpg" alt="Projekt Prime" width="370"><h3>Projekt Prime</h3> <p>Strona internetowa</p></li>
-                    <li class="portf-list"><img src="images/projekt-boxes.jpg" alt="Projekt Boxes" width="370"><h3>Projekt Boxes</h3> <p>Aplikacja</p></li>
-                    <li class="portf-list"><img src="images/IHN-borders.jpg" alt="Inspiration has no Borders" width="370"><h3>Inspiration has no Borders</h3> <p>Strona internetowa</p></li>
-                    <li class="portf-list"><img src="images/limited-edition.jpg" alt="Magazyn Limited Edition" width="370"><h3>Magazyn Limited Edition</h3> <p>Dizajn</p></li>
-                    <li class="portf-list"><img src="images/projekt-LAB.jpg" alt="Projekt LAB" width="370"><h3>Projekt LAB</h3> <p>Marketing</p></li>
-                    <li class="portf-list"><img src="images/groving-business.jpg" alt="Growing Business" width="370"><h3>Growing Business</h3> <p>Aplikacja</p></li>
-                </ul>
-            </section>
-        </main>
-        <footer>
-            <a href="index.html" class="logo-ws"><span class="logo-color">Web</span>Studio</a>
-            <address>
-                <a class="map-address" href="https://goo.gl/maps/nUJ5Fd3hbuF8FEqy5">m. Warszawa, Aleje Jerozolimskie 21<a>
-                <a class="contact-info" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="contact-info" href="tel:+48111111111">+48 111 111 111</a>
-            </address>
-        </footer>
-    </body>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+      integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <title>Zadanie domowe nr:3</title>
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
+  <body>
+    <header>
+      <div class="container header-help">
+        <nav class="header-nav">
+          <a href="index.html" class="logo-ws"
+            ><span class="logo-color">Web</span>Studio</a
+          >
+          <ul class="header-list">
+            <li><a class="header-link" href="index.html">Agencja</a></li>
+            <li>
+              <a class="header-link current" href="portfolio.html">Portfolio</a>
+            </li>
+            <li><a class="header-link" href="#">Kontakt</a></li>
+          </ul>
+        </nav>
+        <div class="header-kontakt">
+          <a
+            class="header-link header-kontact-link"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+          <a class="header-link header-kontact-link" href="tel:+48111111111"
+            >+48 111 111 111</a
+          >
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="section">
+        <div class="container">
+          <h1 class="title-button-h1">Something to hide</h1>
+          <ul class="title-button">
+            <li class="but-list">
+              <button type="button" style="width: 121px">Wszystkie</button>
+            </li>
+            <li class="but-list">
+              <button type="button" style="width: 93px">Strony</button>
+            </li>
+            <li class="but-list">
+              <button type="button" style="width: 114px">Aplikacje</button>
+            </li>
+            <li class="but-list">
+              <button type="button" style="width: 93px">Dizajn</button>
+            </li>
+            <li class="but-list">
+              <button type="button" style="width: 121px">Marketing</button>
+            </li>
+          </ul>
+          <ul class="portfolio-list">
+            <li class="portf-list">
+              <img src="images/technocrack.jpg" alt="technocrack" width="370" />
+              <div>
+                <h3 class="portf-list-h3">Technocrack</h3>
+                <p class="portf-list-p">Strona internetowa</p>
+              </div>
+            </li>
+            <li class="portf-list">
+              <img
+                src="images/GNOvsGS.jpg"
+                alt="Grafika New Orlean vs Golden Star"
+                width="370"
+              />
+              <div>
+                <h3 class="portf-list-h3">Grafika New Orlean vs Golden Star</h3>
+                <p class="portf-list-p">Dizajn</p>
+              </div>
+            </li>
+            <li class="portf-list">
+              <img
+                src="images/restauracja-seafood.jpg"
+                alt="Restauracja Seafood"
+                width="370"
+              />
+              <div>
+                <h3 class="portf-list-h3">Restauracja Seafood</h3>
+                <p class="portf-list-p">Aplikacja</p>
+              </div>
+            </li>
+            <li class="portf-list">
+              <img
+                src="images/projekt-prime.jpg"
+                alt="Projekt Prime"
+                width="370"
+              />
+              <div>
+                <h3 class="portf-list-h3">Projekt Prime</h3>
+                <p class="portf-list-p">Strona internetowa</p>
+              </div>
+            </li>
+            <li class="portf-list">
+              <img
+                src="images/projekt-boxes.jpg"
+                alt="Projekt Boxes"
+                width="370"
+              />
+              <div>
+                <h3 class="portf-list-h3">Projekt Boxes</h3>
+                <p class="portf-list-p">Aplikacja</p>
+              </div>
+            </li>
+            <li class="portf-list">
+              <img
+                src="images/IHN-borders.jpg"
+                alt="Inspiration has no Borders"
+                width="370"
+              />
+              <div>
+                <h3 class="portf-list-h3">Inspiration has no Borders</h3>
+                <p class="portf-list-p">Strona internetowa</p>
+              </div>
+            </li>
+            <li class="portf-list">
+              <img
+                src="images/limited-edition.jpg"
+                alt="Magazyn Limited Edition"
+                width="370"
+              />
+              <div>
+                <h3 class="portf-list-h3">Magazyn Limited Edition</h3>
+                <p class="portf-list-p">Dizajn</p>
+              </div>
+            </li>
+            <li class="portf-list">
+              <img src="images/projekt-LAB.jpg" alt="Projekt LAB" width="370" />
+              <div>
+                <h3 class="portf-list-h3">Projekt LAB</h3>
+                <p class="portf-list-p">Marketing</p>
+              </div>
+            </li>
+            <li class="portf-list">
+              <img
+                src="images/groving-business.jpg"
+                alt="Growing Business"
+                width="370"
+              />
+              <div>
+                <h3 class="portf-list-h3">Growing Business</h3>
+                <p class="portf-list-p">Aplikacja</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
+    <footer class="footer-portfolio">
+      <div class="container">
+        <a href="index.html" class="logo-ws logo-ws-white"
+          ><span class="logo-color">Web</span>Studio</a
+        >
+        <address>
+          <ul>
+            <li class="address-margin">
+              <a
+                class="map-address footer-a-style"
+                href="https://goo.gl/maps/nUJ5Fd3hbuF8FEqy5"
+                >m. Warszawa, Aleje Jerozolimskie 21</a
+              >
+            </li>
+            <li>
+              <a
+                class="contact-info footer-a-style"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a class="contact-info footer-a-style" href="tel:+48111111111"
+                >+48 111 111 111</a
+              >
+            </li>
+          </ul>
+        </address>
+      </div>
+    </footer>
+  </body>
 </html>
